--- a/src/app/layouts/dashboard/dashboard.component.html
+++ b/src/app/layouts/dashboard/dashboard.component.html
@@ -1,2 +1,6 @@
 <app-header [home]="false"></app-header>
 <router-outlet></router-outlet>
+<div class="lg:mx-8">
+    <app-general></app-general>
+</div>
+
