--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -14,16 +14,15 @@
     border-radius: 50%;
 }
 
-::ng-deep #profilleLogout{
+::ng-deep #profilleSetings{
     .p-menuitem-text{
         width: 40%!important;
         display: inline-block; 
         word-wrap: break-word;
     }
-    span[data-highlight*=""]::after {
-        content: 'ali@chumacero.com'!important;
-        color: red!important;
-        font-weight: bold!important;
-        background-color: white!important; /* Para ocultar el texto original debajo */
-    }
+}
+
+::ng-deep #profilleLogout{
+        display: flex!important;
+        justify-content: end;
 }
