--- a/src/app/layouts/pages/home/home.component.html
+++ b/src/app/layouts/pages/home/home.component.html
@@ -9,8 +9,8 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </p>
             <div class="w-full md:w-10 lg:w-8 md:flex md:gap-2 my-4 md:my-6 lg:my-7">
-                <p-button pRipple pElement icon="pi pi-play" label="Demo" styleClass="block md:flex w-full mb-2 md:mb-0 md-w-4 md:px-4 p-button-outlined p-button-plain"></p-button>
-                <p-button pRipple pElement label="Get started" styleClass="block md:flex w-full md-w-4"></p-button>
+                <p-button pRipple pElement (onClick)="redirectLogin()" icon="pi pi-play" label="Demo" styleClass="block md:flex w-full mb-2 md:mb-0 md-w-4 md:px-4 p-button-outlined p-button-plain"></p-button>
+                <p-button pRipple pElement (onClick)="redirectLogin()" label="Get started" styleClass="block md:flex w-full md-w-4"></p-button>
             </div>
             <div class="w-10 mt-5 md:mt-0 lg:w-full flex gap-4 align-items-center align-content-center">
                     <p-avatarGroup>
