--- a/src/app/layouts/auth/auth.component.html
+++ b/src/app/layouts/auth/auth.component.html
@@ -21,7 +21,7 @@
                         </div>
                         <a class="font-medium no-underline ml-2 text-right cursor-pointer" style="color: var(--primary-color)">Forgot password?</a>
                     </div>
-                    <button pButton pRipple label="Sign In" class="w-full p-3 text-xl" [routerLink]="['/']"></button>
+                    <button pButton pRipple label="Sign In" class="w-full p-3 text-xl" [routerLink]="['/dashboard']"></button>
                 </div>
                 <div class="flex justify-content-center align-items-center mt-5">
                     <p class="">Dont have an account? <a class="font-medium no-underline ml-2 text-right text-primary cursor-pointer">Forgot password?</a></p>
