--- a/src/app/layouts/pages/home/home.component.html
+++ b/src/app/layouts/pages/home/home.component.html
@@ -1,4 +1,7 @@
 <app-header></app-header>
+<p-dialog styleClass="w-full md:w-auto overflow-hidden " header="Demo" [(visible)]="video" [modal]="true">
+    <app-demo-video></app-demo-video>
+</p-dialog>
 <section>
     <div class="relative md:flex md:flex-row justify-content-between mx-5 my-5 md:mx-7 md:my-2 lg:mx-8 lg:my-6">
         <div class="col-12 md:col-6 static md:pl-5 md:py-7">
@@ -9,8 +12,8 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </p>
             <div class="w-full md:w-10 lg:w-8 md:flex md:gap-2 my-4 md:my-6 lg:my-7">
-                <p-button pRipple pElement (onClick)="redirectLogin()" icon="pi pi-play" label="Demo" styleClass="block md:flex w-full mb-2 md:mb-0 md-w-4 md:px-4 p-button-outlined p-button-plain"></p-button>
-                <p-button pRipple pElement (onClick)="redirectLogin()" label="Get started" styleClass="block md:flex w-full md-w-4"></p-button>
+                <p-button pRipple pElement (click)="video=true" icon="pi pi-play" label="Demo" styleClass="block md:flex w-full mb-2 md:mb-0 md-w-4 md:px-4 p-button-outlined p-button-plain"></p-button>
+                <p-button pRipple pElement (click)="redirectLogin()" label="Get started" styleClass="block md:flex w-full md-w-4"></p-button>
             </div>
             <div class="w-10 mt-5 md:mt-0 lg:w-full flex gap-4 align-items-center align-content-center">
                     <p-avatarGroup>
