--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -6,8 +6,8 @@
     </ng-template>
     <ng-template pTemplate="end">
         <div *ngIf="home" class="hidden md:flex justify-content-start mr-4 md:mr-8 gap-2">
-            <p-button (onClick)="redirectLogin()" pRipple pElement label="Log in" styleClass="p-button-text p-button-plain"></p-button>
-            <p-button (onClick)="redirectLogin()" pRipple pElement label="Sign up" styleClass=""></p-button>
+            <p-button (Click)="redirectLogin()" pRipple pElement label="Log in" styleClass="p-button-text p-button-plain"></p-button>
+            <p-button (Click)="redirectLogin()" pRipple pElement label="Sign up" styleClass=""></p-button>
         </div>
         <div class="hidden md:flex justify-content-start align-items-center mr-4 md:mr-8 gap-4" *ngIf="!home">
             <a class="text-color-secondary no-underline"><i class="text-2xl pi pi-cog"></i></a>
